--- a/_includes/git-wiki/components/lists/post-list.html
+++ b/_includes/git-wiki/components/lists/post-list.html
@@ -3,8 +3,8 @@
     {% include {{ site.inc_before_post_list }} %}
     {% endif %}
 
-    <span class="post-list-title">Posts {% if (site.show_wiki_posts_limit >= 1 %} (Latest {{site.show_wiki_posts_limit
-        }} updated) {% endif %}:</span>
+    <span class="post-list-title">迭代 {% if (site.show_wiki_posts_limit >= 1 %} (最新 {{site.show_wiki_posts_limit
+        }} 条更新) {% endif %}:</span>
     <ul class="post-list">
         {% assign numPages=0 %}
         {% assign items = site.posts | sort: 'date' %}
