--- a/_includes/git-wiki/sections/header/header.html
+++ b/_includes/git-wiki/sections/header/header.html
@@ -24,7 +24,7 @@
 
 
     {% if site.github.is_user_page %}
-    <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+    <p class="view"><a href="{{ site.github.owner_url }}">访问网站的 GitHub 主页</a></p>
     {% endif %}
 
     {% if site.show_downloads %}
