--- a/_layouts/git-wiki-blog.html
+++ b/_layouts/git-wiki-blog.html
@@ -12,7 +12,7 @@ layout: git-wiki-default
         <div class="git-wiki-content">
             {{ post.excerpt }}
 
-            <a href="{{ post.url | relative_url }}">...Read all</a>
+            <a href="{{ post.url | relative_url }}">...浏览全部</a>
         </div>
     </div>
     <hr>
