--- a/_includes/git-wiki/components/lists/post-list.html
+++ b/_includes/git-wiki/components/lists/post-list.html
@@ -23,7 +23,7 @@
         {% endfor %}
     </ul>
 
-    <span class="post-list read-all"><a href="{{ '/blog/' | relative_url}}">Read all</a></span>
+    <span class="post-list read-all"><a href="{{ '/blog/' | relative_url}}">浏览全部</a></span>
 
     {% if site.inc_after_post_list %}
     {% include {{ site.inc_after_post_list }} %}
