添加国科大和中科院访问链接

--- a/_includes/git-wiki/components/action_btn/downloads.html
+++ b/_includes/git-wiki/components/action_btn/downloads.html
@@ -1,5 +1,7 @@
 <ul class="git-wiki-downloads">
     <li><a target="_blank" href="http://www.lseb.cn/jiaoyuannian">点击访问<strong>JiaoLab</strong></a></li>
+    <li><a target="_blank" href="https://www.ucas.ac.cn/">点击访问<strong>UCAS</strong></a></li>
+    <li><a target="_blank" href="http://www.cas.cn/">点击访问<strong>CAS</strong></a></li>
 <!--    <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>-->
 <!--    <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>-->
 <!--    <li><a href="{{ site.github.repository_url }}">View On <strong>{% if site.github.hostname == "gitlab.com" %} Gitlab {% else %} Github {% endif %} </strong></a></li>-->
