--- a/_includes/git-wiki/components/lists/post-list.html
+++ b/_includes/git-wiki/components/lists/post-list.html
@@ -3,7 +3,7 @@
     {% include {{ site.inc_before_post_list }} %}
     {% endif %}
 
-    <span class="post-list-title">数据 {% if (site.show_wiki_posts_limit >= 1 %} (最新 {{site.show_wiki_posts_limit
+    <span class="post-list-title">项目 {% if (site.show_wiki_posts_limit >= 1 %} (最新 {{site.show_wiki_posts_limit
         }} 条更新) {% endif %}:</span>
     <ul class="post-list">
         {% assign numPages=0 %}
