--- a/_includes/git-wiki/components/lists/page-list.html
+++ b/_includes/git-wiki/components/lists/page-list.html
@@ -3,7 +3,7 @@
     {% include {{ site.inc_before_page_list }} %}
     {% endif %}
 
-    <span class="page-list-title">工具 {% if (site.show_wiki_pages_limit >= 1 %} (最新 {{site.show_wiki_pages_limit
+    <span class="page-list-title">序言 {% if (site.show_wiki_pages_limit >= 1 %} (最新 {{site.show_wiki_pages_limit
         }} 条更新) {% endif %}:</span>
     <ul class="page-list">
         {% assign numPages=0 %}
